--- a/style.css
+++ b/style.css
@@ -72,12 +72,15 @@ button:hover{
     justify-content: center;
     padding: 20px;
 } */
-
+.output{
+    display: flex;
+    justify-content: center;
+}
 .mileage{
     background-color: rgb(40, 40, 44);
     display: flex;
     justify-content: center;
-    margin-left: 40%;
+    /* margin-left: 40%; */
     margin-top:20px ;
     color: #fff;
     font-size: larger;
@@ -136,7 +139,7 @@ button:hover{
     display: flex;
     justify-content: center;
     color: #fff;
-    margin-left: 40%;
+    /* margin-left: 40%; */
     margin-top:20px ;
     font-size: larger;
     width: 350px;
